2013-07-25  Mark Kettenis  <kettenis@openbsd.org>

	* config.gcc (hppa-*-openbsd*): Don't set tmake_file.

2013-07-25  Vladimir Makarov  <vmakarov@redhat.com>

	PR rtl-optimization/57960
	* lra-constraints.c (process_alt_operands): Use the right mode
	when checking strict_low.

2013-07-25  Jan Hubicka  <jh@suse.cz>

	* lto-symtab.c (lto_cgraph_replace_node): Release function body.
	* cgraph.c (cgraph_remove_node): Do not release function body
	when in cgraph streaming.
	* ipa.c (process_references, symtab_remove_unreachable_nodes): Objects
	in other partitions are not considered reachable; fix handling of clones.

2013-07-25  Ramana Radhakrishnan  <ramana.radhakrishnan@arm.com>

	* config/arm/arm.md (*sibcall_insn): Remove unnecessary space.

2013-07-25  Ramana Radhakrishnan  <ramana.radhakrishnan@arm.com>

	PR target/19599
	PR target/57731
	PR target/57748
	* config/arm/arm.md ("*sibcall_insn): Replace use of
	Ss with US. Adjust output for v5 and v4t.
	(*sibcall_value_insn): Likewise and loosen predicate on
	operand0.

	* config/arm/constraints.md ("Ss"): Rename to US.

2013-07-25  Terry Guo  <terry.guo@arm.com>

	* config/arm/arm.c (thumb1_size_rtx_costs): Assign proper cost for
	shift_add/shift_sub0/shift_sub1 RTXs.

2013-07-24  Bill Schmidt  <wschmidt@linux.ibm.com>
	    Anton Blanchard <anton@au1.ibm.com>

	* config/rs6000/altivec.md (altivec_vpkpx): Handle little endian.
	(altivec_vpks<VI_char>ss): Likewise.
	(altivec_vpks<VI_char>us): Likewise.
	(altivec_vpku<VI_char>us): Likewise.
	(altivec_vpku<VI_char>um): Likewise.

2013-07-24  David Malcolm  <dmalcolm@redhat.com>

	Introduce context class.

	* Makefile.in (CONTEXT_H): New.
	(OBJS): Add context.o.
	(toplev.o): Add CONTEXT_H to dependencies.
	(context.o): New.

	* toplev.c (general_init): Create the singleton gcc::context
	instance.

	* context.c: New.

	* context.h: New.

2013-07-24  Joern Rennecke  <joern.rennecke@embecosm.com>

	PR rtl-optimization/57968